--- a/about.html
+++ b/about.html
@@ -98,8 +98,8 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 May 2005</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>amendamaria.me</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>22 AUGUST 2005</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>amendamaria.vercel.app</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>9061144620</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Kerala, INDIA</span></li>
                 </ul>
